--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,19 @@
 h1 {
-  font-size: 35px
+  font-size: 35px;
 }
 #logo {
   height: 60px;
   width: 210px;
+}
+
+#divider {
+  height: 250px;
+  /*position: relative;*/
+  background-image: url('../assets/slanted-gradient-background.svg');
+}
+
+#divider div {
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
