--- a/styles/main.css
+++ b/styles/main.css
@@ -14,6 +14,46 @@ h1 {
 
 #divider span {
   position: absolute;
-  bottom: 0;
+  bottom: 30px;
   right: 0;
+}
+
+.slide {
+  height: 509px;
+}
+
+.slide img {
+    max-width: 100%;
+    max-height: 90%;
+}
+
+#slider {
+  height: 509px;
+}
+
+.left {
+  float: left;
+}
+
+#pages {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.checkImg {
+  max-width: 100%;
+}
+
+.overlayText {
+  position:absolute;
+  z-index:12;
+  top:40%;
+  left:10%;
+  width:100%;
+  text-align:left;
+}
+
+#envelope {
+  /*float: right;*/
+  position:absolute;
 }
