--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,17 @@ h1 {
   width: 210px;
 }
 
+header {
+  text-align: center;
+  background-color: #1676dd;
+}
+
+#heroText {
+  font: 'Roboto-Bold';
+  font-size: 48px;
+  color: #fff;
+}
+
 #divider {
   height: 250px;
   position: relative;
@@ -20,12 +31,11 @@ h1 {
 
 .slide {
   height: 509px;
+  /*object-fit: cover;*/
+  max-width: 100%;
+  max-height: 90%;
 }
 
-.slide img {
-    max-width: 100%;
-    max-height: 90%;
-}
 
 #slider {
   height: 509px;
@@ -38,6 +48,10 @@ h1 {
 #pages {
   margin-top: 50px;
   margin-bottom: 50px;
+}
+
+.page {
+  margin: 10px;
 }
 
 .checkImg {
@@ -54,6 +68,97 @@ h1 {
 }
 
 #envelope {
-  /*float: right;*/
   position:absolute;
+  height: 40px;
+  width: 50px;
+  border-radius: 5px 0 0 5px;
+  background-color: #f7931d;
 }
+
+.button {
+  height: 40px;
+  width: 215px;
+  border-radius: 5px;
+  font: 'Roboto';
+  color: #fff;
+  background: linear-gradient(to right, #f36819 , #f7931d);
+}
+
+#stats {
+  text-align: center;
+}
+
+/*modal style*/
+.modalbox .box {
+    background-color: rgba(0,0,0,0.7);
+    margin: 0 auto;
+    min-width: 210px;
+    padding: 40px;
+    width: 30%;
+    margin-top: 100px;
+    }
+    .modalbox .title {
+    border-bottom: 1px solid #ccc;
+    font-family: verdana;
+    font-size: 22px;
+    letter-spacing: 0.2em;
+    margin: 0;
+    padding: 0 0 10px;
+    text-transform: uppercase;
+    color: #fff;
+        }
+    .modalbox .content {
+    display: block;
+    font-family: Verdana;
+    font-size: 18px;
+    line-height: 22px;
+    padding: 10px 0 0;
+    color: #fff;
+        }
+    .modalbox .close {
+    color: #fff;
+    display: block;
+    float: right;
+    font-family: Verdana;
+    font-size: 22px;
+    height: 25px;
+    text-decoration: none;
+        }
+
+
+.modalbox{
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    color:#333333;
+    }
+
+.modalbox:target {
+    display: block;
+    outline: none;
+}
+
+
+.link-modal{
+    width: 90%;
+    text-align: center;
+    margin: 0 auto;
+    padding-top: 400px;
+    padding-left: 15px;
+}
+
+
+.link-modal a{
+    border: 1px solid #fff;
+    color: #fff;
+    font-size: 20px;
+    letter-spacing: 0.3em;
+    padding: 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
